--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "googleapis": "^39.2.0",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3"
   },
