adding bearer tokens

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-TIMES=2
+PORT=8000
+
+CLIENT_ID=&lt;890431748909-g72topq6mhel2dc0p5l5pb0ts896ib6i.apps.googleusercontent.com>
+
+CLIENT_SECRET=&lt;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>
+
+REDIRECT_URI=&lt;https://developers.google.com/oauthplayground>
+
+REFRESH_TOKEN=&lt;1//04_r2eH8SHB1jCgYIARAAGAQSNwF-L9IrlrxoYWm-YkvrWvHNSPe5Ku7quqcYR5dX9AIzqql3gpi1TEk4rZFzxv3d8nax-_GWzqQ>
