--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.5",
     "express": "^4.18.1",
