--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha"
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "got": "^11.3.0",
+    "jest": "^28.1.3",
     "mocha": "^10.0.0",
     "tape": "^4.7.0"
   },
